Hardcoded todo list with ability to crossout items stylistically

--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <html>
 <head>
 	<title>Todo List</title>
-	<style type="text/css" src="assets/css/todos.css"></style>
+	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.0.0.min.js"></script>
 </head>
 <body>
+
+
+
+<div id="container">
+	<h1>Todo List</h1>
+	<input type="text" name="">
+	<ul>
+		<li><span>X</span> Go To Potions Class</li>
+		<li><span>X</span> Buy new robes</li>
+		<li><span>X</span> Visit Hagrid</li>
+	</ul>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
