--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Todo List</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.0.0.min.js"></script>
 </head>
@@ -10,27 +11,14 @@
 
 
 <div id="container">
-	<h1>Todo List</h1>
-	<input type="text" name="">
+	<h1>To-do List</h1>
+	<input type="text" placeholder="add new todo">
 	<ul>
 		<li><span>X</span> Go To Potions Class</li>
 		<li><span>X</span> Buy new robes</li>
 		<li><span>X</span> Visit Hagrid</li>
 	</ul>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <script type="text/javascript" src="assets/js/todos.js"></script>
