--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Todo List</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.0.0.min.js"></script>
 </head>
 <body>
@@ -11,12 +12,12 @@
 
 
 <div id="container">
-	<h1>To-do List</h1>
+	<h1>To-do List <i class="fa fa-plus"></i></h1>
 	<input type="text" placeholder="add new todo">
 	<ul>
-		<li><span>X</span> Go To Potions Class</li>
-		<li><span>X</span> Buy new robes</li>
-		<li><span>X</span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
+		<li><span><i class="fa fa-trash"></i></span> Buy new robes</li>
+		<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
 	</ul>
 </div>
 
